Fix overflow issues with a scroll bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,7 +52,7 @@ a:hover {
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     padding-right: 5px;
-    overflow:scroll;
+    overflow:auto;
 }
 
 #show-results {
@@ -66,7 +66,7 @@ a:hover {
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     padding-right: 5px;
-    overflow:scroll;
+    overflow:auto;
 }
 
 .buttons {
